--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,19 @@
 	      <version>3.8.1</version>
 	      <scope>test</scope>
 	    </dependency>
+	    
+	    <!-- tiles -->
+	    <dependency>
+		    <groupId>org.apache.tiles</groupId>
+		    <artifactId>tiles-jsp</artifactId>
+		    <version>3.0.8</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.tiles</groupId>
+		    <artifactId>tiles-core</artifactId>
+		    <version>3.0.8</version>
+		</dependency>
+		
   </dependencies>
   
   <build>
