--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
 		<logback.version>1.1.3</logback.version>
 		<jcl.slf4j.version>1.7.12</jcl.slf4j.version>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
+		
+		<!-- jackson -->
+        <jackson2.version>2.8.6</jackson2.version>
   </properties>
 
   <dependencies>
@@ -182,6 +185,13 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>1.4</version>
 		</dependency>
+		
+		<!-- json path -->
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.2.0</version>
+        </dependency>
 		
   </dependencies>
   
