--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,19 @@
             <version>2.2.0</version>
         </dependency>
 		
+		<!-- image -->
+		<dependency>
+		    <groupId>org.imgscalr</groupId>
+		    <artifactId>imgscalr-lib</artifactId>
+		    <version>4.2</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.sanselan</groupId>
+		    <artifactId>sanselan</artifactId>
+		    <version>0.97-incubator</version>
+		</dependency>
+		
   </dependencies>
   
   <build>
