[FE] jquery lazyload 추가

--- a/src/main/webapp/static/js/package.json
+++ b/src/main/webapp/static/js/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "handlebars": "^4.0.11",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "jquery-lazyload": "^1.9.7"
   }
 }
