--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,19 @@
             <artifactId>spring-web</artifactId>
             <version>${spring-framework.version}</version>
         </dependency>
+        
+        <!-- Ehcache -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context-support</artifactId>
+		    <version>${spring-framework.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>net.sf.ehcache</groupId>
+		    <artifactId>ehcache</artifactId>
+		    <version>2.10.4</version>
+		</dependency>
 		
 		<!-- spring mvc -->
 		<dependency>
